@@ -7,4 +7,5 @@
 bool canWireConnectTo(LevelSource *level, int x, int y, int z, int side);
 void make_redstone_wire();
 void make_redstone_blocks();
+void make_lamp(int id, bool active);
 extern bool repeater_rendering_torches;
